2008-09-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/GnomeApplication.cs: Initialize Catalog on application Init.

2008-09-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/tasque.in: Add Mono --debug, --trace, and --profile support to
	  "tasque" command.
	* src/Application.cs: Use UIManager to construct/manage tray icon menu.
	   Add Sandy and Brian to the "Authors" area of the About dialog.
	* src/Makefile.am: Install .mdb file for debugging purposes.

2008-09-26  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* tasque.csproj: Remove unused references and build for .NET 2.0, not 3.5.

2008-09-26  Johnny Jacob  <johnnyjacob@gmail.com>

	* src/PreferencesDialog.cs: Let categories in task filtering use all
	the available space.

2008-09-26  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* tasque.csproj, src/Defines.WIN32.cs: Rename Defines.cs for Windows.

2008-09-26  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* tasque.mdp, src/Makefile.am: Add new files.
	* src/Defines.cs: Keep Defines.cs in sync.  Should do this better,
	  though, but I'm tired.
	* src/Application.cs, src/GnomeApplication.cs: Typo fix.

2008-09-26  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* tasque.sln, tasque.csproj: Visual Studio 2008 solution for building
	  Tasque with the Dummy and RTM backends.
	* src/Application.cs, src/NativeApplication.cs, src/GnomeApplication.cs,
	  src/WindowsApplication.cs: Platform-specific app management code.
	* src/Logger.cs: Some ugly (temporary) #if WIN32 lines.
	* src/Defines.cs.in: Rename GnomeLocaleDir to LocaleDir.
	* src/Defines.cs: Commit a copy for building on Windows.
	* src/Preferences.cs: Pick conf file in platform-independent way.
	* src/Utilities.cs: Process-renaming code moved to src/GnomeApplication.cs.
	* winbin/: Mono assemblies needed on Windows.

2008-09-26  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: Handle null backend the same as unconfigured
	  backend.  Whitespace fixes.